<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="app_name">WGSB</string>
    <string name="backup_failed_bug">Backup failed- If you can see this, report it as a bug!</string>
    <string name="backup_failed_sd">Backup failed - Your SD card could not be written to</string>
    <string name="backup_successful">Backup successful!</string>
    <string name="news">News</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data">Clear all data?</string>
    <string name="clear_data_confirm">Are you sure you want to clear all data? </string>
    <string name="compact_detail">Select Compact Detail</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="full_name">Full Name</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_no">no</string>
    <string name="gcm_play_services_error_extra">Google Play Services not detected, please install this first.</string>
    <string name="gcm_play_services_error">Google Play Services Error</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_yes">yes</string>
    <string name="image">Image</string>
    <string name="internet_connection_error">Internet Connection Error</string>
    <string name="internet_connection_error_extra">Please connect to working Internet connection</string>
    <string name="msglbl">"Message : "</string>
    <string name="no">No</string>
    <string name="no_internet">There was an error connecting to the internet to retrieve the initial data.  \n\nPlease check your device settings and make sure your device has full internet access</string>
    <string name="no_internet_refresh">There was an error connecting to the internet to refresh the data.  \n\nPlease check your device settings and make sure your device has full internet access</string>
    <string name="no_working_connection">Please connect to a working internet connection</string>
    <string name="ok">OK</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="push">Push Notifications</string>
    <string name="push_summary">Toggle whether to receive push message alerts.</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="register_encryption_note">*Note: Your details are encrypted before being sent to our server.</string>
    <string name="restore">Restore from backup?</string>
    <string name="restore_confirm">Are you sure you want to restore? You will lose your current timetable </string>
    <string name="restore_deleted_backup">Backup detected. Restore it?</string>
    <string name="restore_failed_file">Restore failed - Invalid backup file</string>
    <string name="restoring">Restoring…</string>
    <string name="server_register_error">Could not register device on WGSB Server after %1$d attempts.</string>
    <string name="server_registered">From WGSB Server: successfully added device!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on WGSB Server.</string>
    <string name="server_unregistered">From WGSB Server: successfully removed device!</string>
    <string name="server_update_settings">Updating YearGroup Settings on Server</string>
    <string name="server_update_settings_error">Error updating YearGroup Settings</string>
    <string name="server_unregister_error">Could not unregister device on WGSB Server (%1$s).</string>
    <string name="settings">Settings</string>
    <string name="sliding_pane_titleClosed">Sliding pane closed</string>
    <string name="sliding_pane_titleOpened">Sliding pane opened</string>
    <string name="timetable_name">Timetable</string>
    <string name="timetable_settings">Timetable Settings</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_news_detail">News Detail</string>
    <string name="topical_information">Topical Information</string>
    <string name="wgsb_name">WGSB</string>
    <string name="year">Year Group</string>
    <string name="year_summary">Choose what year groups you would like to receive push notifications for.</string>
    <string name="year_settings">Year Groups</string>
    <string name="year_7">Year 7</string>
    <string name="year_8">Year 8</string>
    <string name="year_9">Year 9</string>
    <string name="year_10">Year 10</string>
    <string name="year_11">Year 11</string>
    <string name="year_12">Lower Sixth Form</string>
    <string name="year_13">Upper Sixth Form</string>
    <string name="yes">Yes</string>
    <string-array name="notifications">
        <item>Ongoing</item>
        <item>None</item>
    </string-array>
    <string-array name="notifications_values">
        <item>ongoing</item>
        <item>none</item>
    </string-array>
    <string-array name="secondary">
        <item>Room</item>
        <item>Time</item>
    </string-array>
    <string-array name="secondary_values">
        <item>room</item>
        <item>time</item>
    </string-array>
    <string-array name="theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="view_style">
        <item>Expanded</item>
        <item>Compact</item>
    </string-array>
    <string-array name="view_style_values">
        <item>exp</item>
        <item>comp</item>
    </string-array>
</resources>